update: game-theory-i add new problem

--- a/game-theory-i/index.html
+++ b/game-theory-i/index.html
@@ -286,6 +286,13 @@
             <p class="font-serif my-1">数据范围：1 <= w, h, r <= 100</p>
           </div>
         </section>
+        <section class="future" aria-hidden="true" style="display: block;">  
+          <div>
+            <h2 id="overview" class="text-xl mt-2 pb-2 font-sans">1-2-K Game</h2>
+            <p class="font-serif my-1">Alice 和 Bob 两个人在玩游戏。有一堆数量为 n 的石子，每次可以取 1， 2， k 个石子，无法操作的人为输家，Alice 先手，问 Alice 是否必胜？</p>
+            <p class="font-serif my-1">数据范围：0 <= n <= 1e9, 3 <= k <= 1e9</p>
+          </div>
+        </section>
       </section>
       <section class="future" aria-hidden="true" style="display: none;">    
         <div>
@@ -304,10 +311,10 @@
             <li class="ml-8">翻硬币游戏</li>
           </ul>
           <hr>
-          <p class="font-serif my-1">例题详细答案 & 其他练习题：</p>
+          <!-- <p class="font-serif my-1">例题详细答案 & 其他练习题：</p>
           <ul class="list-disc font-serif">
             <li class="ml-8">https://bytedance.feishu.cn/docx/doxcnvEo25rENx6uz1EjFO7MgUh</li>
-          </ul>
+          </ul> -->
         </div>
       </section>
       <section class="future" aria-hidden="true" style="display: none;">    
